Bug 1637705 - fix SWGL's frustum clipping to work against all 6 sides. r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D75166